kubernetes/apps/stremio/stremio-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stremio
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stremio
  name: stremio
  namespace: stremio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stremio
  strategy: {}
  template:
    metadata:
      labels:
        app: stremio
    spec:
      volumes:
      - name: stremio-data
        persistentVolumeClaim:
          claimName: stremio-data
      containers:
      - image: tsaridas/stremio-docker:v1.3.9
        name: stremio-docker
        volumeMounts:
        - name: stremio-data
          mountPath: /root/.stremio-server
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: "2"
            memory: 2Gi
            gpu.intel.com/i915: 1
status: {}
