kubernetes/apps/stremio/httproute-stremio.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stremio
  namespace: stremio
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: homelab-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - stremio.alialjaffer.com
  rules:
  - backendRefs:
    - name: stremio
      port: 8099
